--- a/Codes/PaginaInicial.form
+++ b/Codes/PaginaInicial.form
@@ -129,6 +129,9 @@
                   <Image iconType="3" name="/Images/menuHam.png"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtHamburguerActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="BtPesquisar">
               <Properties>
@@ -520,15 +523,11 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="LabelCategoria" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="BTConjuntos1" alignment="0" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="BTSeleções" min="-2" max="-2" attributes="0"/>
-                              <Component id="BTConjuntos" min="-2" max="-2" attributes="0"/>
-                              <Component id="BTTimes" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="LabelCategoria" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="BTConjuntos1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="BTSeleções" min="-2" max="-2" attributes="0"/>
+                          <Component id="BTConjuntos" min="-2" max="-2" attributes="0"/>
+                          <Component id="BTTimes" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -592,9 +591,9 @@
                                   <Component id="BTConjuntos1" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="BTTermosDeerviço" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="BTConjuntos" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="BTTermosDeerviço" min="-2" max="-2" attributes="0"/>
+                                  <Component id="BTConjuntos" min="-2" pref="21" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -608,7 +607,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="58" max="32767" attributes="0"/>
+                      <EmptySpace pref="57" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -643,6 +642,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Times"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BTTimesActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="LabelCategoria">
               <Properties>
@@ -659,6 +661,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Quem somos"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BTQuemSomosNosActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="BTduvidas">
               <Properties>
@@ -667,6 +672,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Duv&#xed;das"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BTduvidasActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="BTRastrearPedido">
               <Properties>
